--- a/documentacion/ReportCodeAnalyzer.html
+++ b/documentacion/ReportCodeAnalyzer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Code Analyzer Report: New on Tue Apr 25 17:07:51 ART 2017</title>
+<title>Code Analyzer Report: SEL on Thu Apr 27 17:46:59 ART 2017</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#E2E2C7">
@@ -14,7 +14,7 @@
         </tr>
         <tr>
           <td width="50%"><font color="#CCFFCC" size="5">Report for Code Set:</font></td>
-          <td width="50%"><font color="#CCFFCC" size="5">New</font></td>
+          <td width="50%"><font color="#CCFFCC" size="5">SEL</font></td>
         </tr>
         <tr>
           <td width="50%"><font color="#CCFFCC" size="5">Extension Set:</font></td>
@@ -22,7 +22,7 @@
         </tr>
         <tr>
           <td width="50%"><font color="#CCFFCC" size="5">Date:</font></td>
-          <td width="50%"><font color="#CCFFCC" size="5">Tue Apr 25 17:07:51 ART 2017</font></td>
+          <td width="50%"><font color="#CCFFCC" size="5">Thu Apr 27 17:46:59 ART 2017</font></td>
         </tr>
         <tr>
           <td width="50%"><font color="#CCFFCC" size="5">Displaying:</font></td>
@@ -55,20 +55,20 @@
             <hr color="#000080">
           </td>
         </tr>
-          <td bgcolor="#C6C6FF" colspan="14">New</td>
+          <td bgcolor="#C6C6FF" colspan="14">SEL</td>
         <tr>
           <td>-Cumulative-</td>
           <td>10</td>
-          <td>913</td>
-          <td>23</td>
-          <td>719</td>
-          <td>0</td>
-          <td>194</td>
-          <td>3,71</td>
-          <td>0,00</td>
-          <td>3,71</td>
+          <td>929</td>
+          <td>24</td>
+          <td>731</td>
+          <td>2</td>
+          <td>196</td>
+          <td>3,69</td>
+          <td>365,50</td>
+          <td>3,73</td>
           <td>0,79</td>
-          <td>71</td>
+          <td>73</td>
           <td>0</td>
           <td>19</td>
         </tr>
@@ -76,16 +76,16 @@
         <tr>
           <td>-Cumulative-</td>
           <td>10</td>
-          <td>913</td>
-          <td>23</td>
-          <td>719</td>
-          <td>0</td>
-          <td>194</td>
-          <td>3,71</td>
-          <td>0,00</td>
-          <td>3,71</td>
+          <td>929</td>
+          <td>24</td>
+          <td>731</td>
+          <td>2</td>
+          <td>196</td>
+          <td>3,69</td>
+          <td>365,50</td>
+          <td>3,73</td>
           <td>0,79</td>
-          <td>71</td>
+          <td>73</td>
           <td>0</td>
           <td>19</td>
         </tr>
@@ -93,16 +93,16 @@
         <tr>
           <td>-Cumulative-</td>
           <td>10</td>
-          <td>913</td>
-          <td>23</td>
-          <td>719</td>
-          <td>0</td>
-          <td>194</td>
-          <td>3,71</td>
-          <td>0,00</td>
-          <td>3,71</td>
+          <td>929</td>
+          <td>24</td>
+          <td>731</td>
+          <td>2</td>
+          <td>196</td>
+          <td>3,69</td>
+          <td>365,50</td>
+          <td>3,73</td>
           <td>0,79</td>
-          <td>71</td>
+          <td>73</td>
           <td>0</td>
           <td>19</td>
         </tr>
@@ -110,16 +110,16 @@
         <tr>
           <td>-Cumulative-</td>
           <td>10</td>
-          <td>913</td>
-          <td>23</td>
-          <td>719</td>
-          <td>0</td>
-          <td>194</td>
-          <td>3,71</td>
-          <td>0,00</td>
-          <td>3,71</td>
+          <td>929</td>
+          <td>24</td>
+          <td>731</td>
+          <td>2</td>
+          <td>196</td>
+          <td>3,69</td>
+          <td>365,50</td>
+          <td>3,73</td>
           <td>0,79</td>
-          <td>71</td>
+          <td>73</td>
           <td>0</td>
           <td>19</td>
         </tr>
@@ -256,18 +256,18 @@
         <tr>
           <td>-Cumulative-</td>
           <td>3</td>
-          <td>279</td>
-          <td>25</td>
-          <td>217</td>
-          <td>0</td>
-          <td>62</td>
-          <td>3,50</td>
-          <td>0,00</td>
-          <td>3,50</td>
+          <td>295</td>
+          <td>26</td>
+          <td>229</td>
+          <td>2</td>
+          <td>64</td>
+          <td>3,47</td>
+          <td>114,50</td>
+          <td>3,58</td>
           <td>0,78</td>
-          <td>72</td>
+          <td>76</td>
           <td>0</td>
-          <td>20</td>
+          <td>21</td>
         </tr>
         <tr>
           <td>testMatrizMath.java</td>
@@ -288,18 +288,18 @@
         <tr>
           <td>testSEL.java</td>
           <td>1</td>
-          <td>41</td>
-          <td>20</td>
-          <td>33</td>
-          <td>0</td>
-          <td>8</td>
-          <td>4,12</td>
-          <td>0,00</td>
-          <td>4,12</td>
-          <td>0,80</td>
-          <td>33</td>
-          <td>0</td>
-          <td>8</td>
+          <td>57</td>
+          <td>27</td>
+          <td>45</td>
+          <td>2</td>
+          <td>10</td>
+          <td>3,75</td>
+          <td>22,50</td>
+          <td>4,50</td>
+          <td>0,79</td>
+          <td>45</td>
+          <td>2</td>
+          <td>10</td>
         </tr>
         <tr>
           <td>testVectorMath.java</td>
